[metadata]
name = addok-http-falcon
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    addok
    falcon==2.0.0

[options.extras_require]
test =
    pytest==4.4.2
    pytest-falcon==0.4.2

[options.entry_points]
addok.ext =
    http_falcon=addok_http_falcon
